<resources>
    <string name="app_name">Curve Delivery</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="network_error_please_try_later">Please check your internet connect and try again\n</string>
    <string name="connection_lost_please_try_later">Connection Lost\n</string>
    <string name="server_error_please_try_later">Server Error</string>
    <string name="something_went_wrong">Please try again later\n</string>
    <string name="no_network_found">Please check your internet connection and try again</string>
    <string name="title_activity_pdf_render">PdfRenderActivity</string>
    <string name="upload_image">Upload Image</string>
    <string name="choose_from_below_option">Choose from below option</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="pdf">Pdf</string>
    <string name="are_you_sure_you_want_to_delete_this_account">Are you sure you want\n to delete this account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gps_location">GPS Location</string>
    <string name="please_enable_gps_from_your_settings">Please enable GPS, from your settings</string>
    <string name="cancel">Cancel</string>
    <string name="setting">Setting</string>
    <string name="select_language">Select Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="password_reset">Password Reset</string>
    <string name="new_password_has_been_reset_successfully_use_new_password_to_login_to_get_access_your_account">New password has been reset successfully, use new password to login to get access your account.</string>
    <string name="take_me_to_login">Take me to login</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="thank_you_buddy">Thank You Buddy!</string>
    <string name="your_registration_completed_just_we_ll_take_1_2_days_to_verify_all_the_details_after_that_you_ll_be_notified">Your registration completed, Just we\'ll take 1-2 days to verify all the details, after that you\'ll be notified.</string>
    <string name="okay">Okay</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want\n to logout?</string>
    <string name="please_enter_mobile_number">Please enter Mobile Number</string>
    <string name="please_enter_current_password">Please enter Current Password</string>
    <string name="please_enter_new_password">Please enter New Password</string>
    <string name="current_password_and_new_password_should_not_be_same">Current Password and New Password should not be same</string>
    <string name="confirm_password_and_new_password_should_be_same">Confirm Password and New Password should be same</string>
    <string name="new_password_must_be_7_15_characters_long_with_at_least_1_uppercase_1_lowercase_1_special_character_and_1_number">New Password must be 7-15 characters long with at least 1 uppercase, 1 lowercase, 1 special character, and 1 number.</string>
    <string name="press_again_to_exit_the_app">Press again to exit the app</string>
    <string name="you_are_blocked_by_admin">You are Blocked by Admin</string>
    <string name="your_account_has_been_rejected_by_admin_please_contact_admin">Your Account Has been Rejected by Admin, Please Contact Admin</string>
    <string name="documented_rejected_please_upload_document_again">Documented Rejected, Please Upload Document Again.</string>
    <string name="please_enter_otp">Please Enter OTP</string>
    <string name="mobile_number_should_be_of_minimum_7_digits_long">Mobile Number should be of minimum 7 digits long</string>
    <string name="please_enter_password">Please enter Password</string>
    <string name="please_enter_account_holder_name">Please enter Account Holder Name</string>
    <string name="please_enter_bank_name">Please enter Bank Name</string>
    <string name="please_enter_account_number">Please enter Account Number</string>
    <string name="please_enter_valid_account_number">Please enter valid Account Number</string>
    <string name="account_number_and_confirm_account_number_should_be_same">Account Number and Confirm Account Number should be same</string>
    <string name="please_enter_confirm_account_holder_number">Please enter Confirm Account Holder Number</string>
    <string name="please_enter_bank_code">Please enter Bank Code</string>
    <string name="please_allow_the_camera_permission_from_phone_settings">Please allow the camera permission from Phone Settings</string>
    <string name="permission_granted">Permission granted</string>
    <string name="registration_certification">Registration Certification</string>
    <string name="please_enter_vehicle_number">Please enter Vehicle Number</string>
    <string name="please_upload_registration_certification">Please upload Registration Certification</string>
    <string name="please_upload_front_side_driving_license">Please upload Front Side Driving License</string>
    <string name="please_upload_back_side_driving_license">Please upload Back Side Driving License</string>
    <string name="please_upload_profile_picture_in_png_jpg_and_jpeg_format">Please upload Profile Picture in PNG, JPG and JPEG format</string>
    <string name="please_enter_full_name">Please enter Full Name</string>
    <string name="please_enter_email_address">Please enter Email Address</string>
    <string name="please_enter_valid_email_address">Please enter valid Email Address</string>
    <string name="please_select_gender">Please select Gender</string>
    <string name="please_enter_dob">Please enter DOB</string>
    <string name="please_select_language">Please select Language</string>
    <string name="please_upload_front_side_id_proof">Please upload Front Side ID Proof</string>
    <string name="please_upload_back_side_id_proof">Please upload Back Side ID Proof</string>
    <string name="password_must_be_7_15_characters_long_with_1_uppercase_1_lowercase_1_special_character_number"><![CDATA[Password must be 7-15 characters long (with 1 uppercase, 1 lowercase, 1 special character & number]]></string>
    <string name="please_enter_confirm_password">Please enter Confirm Password</string>
    <string name="please_accept_terms_conditions"><![CDATA[Please accept Terms & Conditions]]></string>
    <string name="password_and_confirm_password_should_be_same">Password and Confirm Password should be same</string>
    <string name="cancel_reason">Cancel Reason</string>
    <string name="submit">Submit</string>
    <string name="food_order">Food Order</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="total_orders">Total Orders</string>
    <string name="view_history">View History</string>
    <string name="total_earned_in_kd">Total Earned(IN KD)</string>
    <string name="order_history">Order History</string>
    <string name="no_orders_found">No Orders Found!</string>
    <string name="delivery_date_time"><![CDATA[Delivery Date & Time]]></string>
    <string name="order_details">Order Details</string>
    <string name="order_id">"Order ID : "</string>
    <string name="rating_review_received"><![CDATA[Rating & Review Received]]></string>
    <string name="chat">Chat</string>
    <string name="about_us">About Us</string>
    <string name="create_password">Create Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="we_re_here_to_help_if_you_have_any_questions_concerns_or_feedback_regarding_the_curve_driver_app_please_reach_out_to_us_through_any_of_the_following_methods">We’re here to help! If you have any questions, concerns, or feedback regarding the Curve Driver App, please reach out to us through any of the following methods.</string>
    <string name="support_email">Support Email</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="location">Location</string>
    <string name="your_location">Your Location</string>
    <string name="use_my_current_location">Use my Current Location</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="filter">Filter</string>
    <string name="apply">Apply</string>
    <string name="my_earning">My Earning</string>
    <string name="total_amount_earned">Total Amount Earned</string>
    <string name="admin_commission">Admin Commission</string>
    <string name="pending_namount">Pending /nAmount</string>
    <string name="total_kilometter">Total Kilometter</string>
    <string name="transactions_history">Transactions History</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_accept_the_terms_conditions"><![CDATA[I accept the terms & conditions]]></string>
    <string name="bank_details">Bank Details</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="basic_details">Basic Details</string>
    <string name="hey_it_s_so_simple_to_create_a_new_account_just_in_3_steps">Hey It\'s so simple to create a new account just in\n 3 steps.</string>
    <string name="_continue">Continue</string>
    <string name="driving_license">Driving License</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="select_a_vehicle_type_fill_other_vehicle_details"><![CDATA[Select a vehicle type, & fill other vehicle details.]]></string>
    <string name="enter_your_correct_bank_details_you_ll_receive_earning_in">Enter your correct bank details, you\'ll receive earning in.</string>
    <string name="reset_password">Reset Password</string>
    <string name="_6_digit_otp_has_been_sent_to_your_registered_mobile_number">6 digit OTP has been sent to your registered Mobile Number.</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="call">Call</string>
    <string name="logout">Logout</string>
    <string name="view_profile">View Profile</string>
    <string name="save">Save</string>
    <string name="support_contact_number">Support Contact Number</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="service_type">Service Type</string>
    <string name="status">Status</string>
    <string name="rating_reviews"><![CDATA[Rating & Reviews]]></string>
    <string name="no_rating_available">No Rating Available</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="registration_certificate">Registration Certificate</string>
    <string name="my_profile">My Profile</string>
    <string name="login">Login</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing">Lorem ipsum dolor sit amet, consectetur adipiscing.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">Signup</string>
    <string name="track_order">Track Order</string>
    <string name="you_are_navigating_to">You are navigating to</string>
    <string name="exit">Exit</string>
    <string name="ongoing_order">Ongoing Order</string>
    <string name="navigate">Navigate</string>
    <string name="confirm">Confirm</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="password">Password</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="enter_language">Enter Language</string>
    <string name="upload_id_proof">Upload ID Proof</string>
    <string name="upload">Upload</string>
    <string name="front_side">Front Side</string>
</resources>