<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@drawable/bg_round"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gps_location"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"
        />


    <TextView
        android:id="@+id/camera_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/please_enable_gps_from_your_settings"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:paddingHorizontal="40dp"
        android:layout_marginTop="20dp"
        >
    <TextView
        android:id="@+id/mCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:paddingVertical="5dp"
        android:layout_weight="1"
        android:paddingHorizontal="10dp"
        android:background="@drawable/bg_round_5dp"
        />


    <TextView
        android:id="@+id/mSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:gravity="center"
        android:layout_marginStart="50dp"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/bg_round_5dp"
        />

    </LinearLayout>


</LinearLayout>