<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    android:layout_gravity="center"
    android:paddingTop="16dp"
    android:background="@drawable/bg_round_2"
    >


    <TextView
        android:id="@+id/upload_image_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/upload_image"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/montserrat_bold" />

    <TextView
        android:id="@+id/choose_option_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/choose_from_below_option"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/montserrat_semibold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:gravity="center">


            <TextView
                android:id="@+id/mCamera"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/camera"
                android:gravity="center"
                android:drawableTop="@drawable/camera"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/montserrat_regular" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/mGallery"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/gallery"
                android:gravity="center"
                android:drawableTop="@drawable/gallery"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/montserrat_regular" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/mPdf"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:text="@string/pdf"
                android:gravity="center"
                android:drawableTop="@drawable/pdf"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/montserrat_regular" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
