<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/inset_15_password"
    android:elevation="3dp"
    android:layout_gravity="center"
    android:layout_margin="40dp"
    android:padding="20dp">
   >

    <ImageView
        android:id="@+id/done_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/done_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/thank_you_buddy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/password_reset"
        android:textColor="@color/black_333333"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/done_success" />


   <TextView
        android:id="@+id/mRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/gray_9D9D9D"
        android:textSize="12sp"
       android:text="@string/new_password_has_been_reset_successfully_use_new_password_to_login_to_get_access_your_account"
       android:gravity="center"
       android:lineHeight="16dp"
       android:layout_marginHorizontal="30dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thank_you_buddy" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/mOkay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginHorizontal="45dp"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_medium"
        android:background="@drawable/bg_round_button"
        android:layout_marginTop="16dp"
        android:paddingVertical="20dp"
        android:text="@string/take_me_to_login"
        app:layout_constraintTop_toBottomOf="@+id/mRegistration"
        />





</androidx.constraintlayout.widget.ConstraintLayout>
